Changelog for JVCL 3.0
======================
2004-05-05
- Moved inspector components to their own package (JvInspector) // marcelb
2004-04-28
- Added JvBackground donation from Robert Rossmair to JvCore // peter3
2004-04-09
- Added OnCustomDraw event to TJvOutlookBar. Also added demo to show it off // peter3
- Added TJvNavPaneToolPanel to the Nav Pane components // peter3
- Added demo for JvDBImage
- Added JvDBImage to JvDB. JvDBImage can handle *any* graphic file format in DB tables // peter3
2004-04-08
- Moved "HMI Controls" and "HMI Non-Visual" and "HMI Indicators" to "HIM Components" palettte // ahuser
- Compatible to newest JCL // ahuser
- All components compile and run under BCB 6 without any error or hint // ahuser
2004-04-07
- New JVCL installer // ahuser
2004-04-05
- Added EDI Component donation from Raymond Alexander. NB! Requires the latest JCL (don't forget to recompile DJVCL.dpk!) // peter3
2004-04-04
- Removed JvTabControl and moved TJvTabControl into JvComCtrls.pas // peter3
- Added TabPainter property to JvPageControl and JvTabControl // peter3
- Added TJvTabDefaultPainter and TJvTabOutlookPainter to JvComCtrls // peter3
2004-04-02
- Added style manager to NavPane components // peter3
2004-04-01
- Major rewrite of TJvYearGrid:  // obones
   * Now inherits from TCustomGrid under v6 and upper
   * Doesn't save nor reloads its state automatically anymore (too dangerous)
   * GridYear property is renamed to Year
   * Introduced Orientation, the grid can now be vertical
   * Introduced AutoSize and AutoSize options for the grid to adapt to its contents
   * Introduced FirstColWidth and FirstRowHeight
   * Introduced YearFile to be used as default name with LoadYear and SaveYear
   * Introduced CellMargins (if USEJVCL is defined)
   * Introduced WeekendDays (not yet used in the display)
   * Introduced Text Alignment for Month names, Day names, Days, and Year
   * It should now be safe to use more than one grid year in the same project
2004-03-31: